@@ -186,11 +186,11 @@ declare global {
          * @param type The object type.
          * @param index The index.
          */
-        getObject(type: ObjectType, index: number): Object;
+        getObject(type: ObjectType, index: number): LoadedObject;
         getObject(type: "ride", index: number): RideObject;
         getObject(type: "small_scenery", index: number): SmallSceneryObject;
 
-        getAllObjects(type: ObjectType): Object[];
+        getAllObjects(type: ObjectType): LoadedObject[];
         getAllObjects(type: "ride"): RideObject[];
 
         /**
@@ -724,7 +724,7 @@ declare global {
     /**
      * Represents the definition of a loaded object (.DAT or .json) such a ride type or scenery item.
      */
-    interface Object {
+    interface LoadedObject {
         /**
          * The object type.
          */
@@ -757,7 +757,7 @@ declare global {
     /**
      * Represents the object definition of a ride or stall.
      */
-    interface RideObject extends Object {
+    interface RideObject extends LoadedObject {
         /**
          * The description of the ride / stall in the player's current language.
          */
@@ -840,7 +840,7 @@ declare global {
     /**
      * Represents the object definition of a small scenery item such a tree.
      */
-    interface SmallSceneryObject extends Object {
+    interface SmallSceneryObject extends LoadedObject {
         /**
          * Raw bit flags that describe characteristics of the scenery item.
          */
